# XRD-AutoAnalyzer

./: pyproject.toml
autoXRD/spectrum_generation/: __init__.py  mixed.py
