[tool.poetry]
name = "autoXRD"
version = "0.0.4"
description = "A package for automated XRD analysis"
authors = ["Nathan J. Szymanski"]

[tool.poetry.dependencies]
python = ">=3.10, <=3.12"
numpy = "*"
pymatgen = "*"
scipy = "*"
scikit-image = "*"
tensorflow = ">=2.16"
pyxtal = "*"
pyts = "*"
tqdm = "*"
asteval = "*"
numexpr = ">=2.8.3"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"